src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__slice_pattern_rest_middle.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 18,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Slice {
                                                    elements: [
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 22,
                                                                        end: 27,
                                                                        start_line: 1,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 22,
                                                                end: 27,
                                                                start_line: 1,
                                                                start_col: 23,
                                                            },
                                                        },
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 33,
                                                                        end: 37,
                                                                        start_line: 1,
                                                                        start_col: 34,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 33,
                                                                end: 37,
                                                                start_line: 1,
                                                                start_col: 34,
                                                            },
                                                        },
                                                    ],
                                                    rest_pos: Some(
                                                        1,
                                                    ),
                                                },
                                                span: Span {
                                                    start: 21,
                                                    end: 38,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Binary {
                                                    op: Add,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 42,
                                                                                end: 47,
                                                                                start_line: 1,
                                                                                start_col: 43,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 42,
                                                                    end: 47,
                                                                    start_line: 1,
                                                                    start_col: 43,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 42,
                                                            end: 47,
                                                            start_line: 1,
                                                            start_col: 43,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 50,
                                                                                end: 54,
                                                                                start_line: 1,
                                                                                start_col: 51,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 50,
                                                                    end: 54,
                                                                    start_line: 1,
                                                                    start_col: 51,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 50,
                                                            end: 54,
                                                            start_line: 1,
                                                            start_col: 51,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 42,
                                                    end: 54,
                                                    start_line: 1,
                                                    start_col: 43,
                                                },
                                            },
                                            span: Span {
                                                start: 21,
                                                end: 54,
                                                start_line: 1,
                                                start_col: 22,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 56,
                                                    end: 57,
                                                    start_line: 1,
                                                    start_col: 57,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 61,
                                                            end: 62,
                                                            start_line: 1,
                                                            start_col: 62,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 61,
                                                    end: 62,
                                                    start_line: 1,
                                                    start_col: 62,
                                                },
                                            },
                                            span: Span {
                                                start: 56,
                                                end: 62,
                                                start_line: 1,
                                                start_col: 57,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 64,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 66,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 66,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 66,
        start_line: 1,
        start_col: 1,
    },
}
