src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__slice_pattern_rest_named.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 18,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 18,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Slice {
                                                    elements: [
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 22,
                                                                        end: 27,
                                                                        start_line: 1,
                                                                        start_col: 23,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 22,
                                                                end: 27,
                                                                start_line: 1,
                                                                start_col: 23,
                                                            },
                                                        },
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 29,
                                                                        end: 35,
                                                                        start_line: 1,
                                                                        start_col: 30,
                                                                    },
                                                                },
                                                                subpattern: Some(
                                                                    Pattern {
                                                                        kind: Rest,
                                                                        span: Span {
                                                                            start: 38,
                                                                            end: 40,
                                                                            start_line: 1,
                                                                            start_col: 39,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                            span: Span {
                                                                start: 29,
                                                                end: 40,
                                                                start_line: 1,
                                                                start_col: 30,
                                                            },
                                                        },
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 5,
                                                                    },
                                                                    span: Span {
                                                                        start: 42,
                                                                        end: 46,
                                                                        start_line: 1,
                                                                        start_col: 43,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 42,
                                                                end: 46,
                                                                start_line: 1,
                                                                start_col: 43,
                                                            },
                                                        },
                                                    ],
                                                    rest_pos: None,
                                                },
                                                span: Span {
                                                    start: 21,
                                                    end: 47,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 51,
                                                                        end: 56,
                                                                        start_line: 1,
                                                                        start_col: 52,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 51,
                                                            end: 56,
                                                            start_line: 1,
                                                            start_col: 52,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 51,
                                                    end: 56,
                                                    start_line: 1,
                                                    start_col: 52,
                                                },
                                            },
                                            span: Span {
                                                start: 21,
                                                end: 56,
                                                start_line: 1,
                                                start_col: 22,
                                            },
                                        },
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Wildcard,
                                                span: Span {
                                                    start: 58,
                                                    end: 59,
                                                    start_line: 1,
                                                    start_col: 59,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 63,
                                                            end: 64,
                                                            start_line: 1,
                                                            start_col: 64,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 63,
                                                    end: 64,
                                                    start_line: 1,
                                                    start_col: 64,
                                                },
                                            },
                                            span: Span {
                                                start: 58,
                                                end: 64,
                                                start_line: 1,
                                                start_col: 59,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 66,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 68,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 68,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 68,
        start_line: 1,
        start_col: 1,
    },
}
